--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "bookshelf": "^0.9.5",
     "bookshelf-bcrypt": "^2.1.0",
     "bookshelf-uuid": "^1.0.0",
+    "boom": "^4.3.1",
     "hapi": "^13.4.1",
+    "hapi-auth-jwt2": "^7.2.4",
     "joi": "^10.4.1",
+    "jsonwebtoken": "^7.3.0",
     "knex": "^0.10.0",
     "mysql": "^2.12.0"
   },
